# lte-and-ethernet

./: .gitignore  CMakeLists.txt  Kconfig  prj.conf
boards/: nrf9160dk_nrf9160_ns.overlay
cert/: lets-encrypt-r3.pem  origin_ca_ecc_root.pem
include/clientname/: certificate.h  ethernet.h  message.h  modem.h  repository.h
src/: ethernet.c  main.c  modem.c  repository.c  tls.c
tools/: updatebuild.py
